# cmake.templates

./: CMakeLists.txt  CMakeLists.txt.in  README.md
cmake/: clang_warnings.cmake  doxygen.cmake  env.cmake  find.cmake  gcc_warnings.cmake  msvc_warnings.cmake
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  main.cpp
